2011-02-08 Satoshi Konno <skonno@cybergarage.org>
	* Changed the trunk directory into 'trunk' instead of 'trunk/cyberlink'
	* Fixed some pom files to run normally.

2011-09-16 Satoshi Konno <skonno@cybergarage.org>
	* v2.1 

2011-09-15 Jaap <jpdjong@users.sourceforge.net>
	* Fixed Service::getSCPDNode() to search the node more correctly.
	* Fixed Device::httpGetRequestRecieved() to get the local address from the request.

2011-02-18 Hao Hu
	* Fixed Parser::parse() to get the port normally if the port isn't specified.
	* Fixed HTTPRequest::post() to set the timeout value correctly.

2010-09-18  Robin V. <robinsp@gmail.com>
	* Fixed getSCPDNode() not to occur recursive http get requests.

2010-09-09 Satoshi Konno <skonno@cybergarage.org>
	* v2.0 

2009-11-11 Satoshi Konno <skonno@cybergarage.org>
	* Added Device::getAbsoluteURL().
	* Improved Service::getSCPDNode() using Device::getAbsoluteURL().
	* Changed Parser::parser() to use ByteArrayInputStream instead of StringBufferInputStream because of bugs in Android v1.6.

2009-10-07 Satoshi Konno <skonno@cybergarage.org>
	* Changed HTTPMU::open() to bind the specified address and port for Android v1.6.
	* Fixed the thread name of SSDPSearchResponseSocket to use the correct local port.
	* Fixed XmlPullParser::parser() to set namespaces correctlly.
	 
2009-05-10 Satoshi Konno <skonno@cybergarage.org>
	* Added XmlPullParser class to support Android 1.x into org.cybergarage.xml.parser.
	* Changed kXML2Parser class as a sub class of XmlPullParser.
	* Changed UPnP::loadDefaultXMLParser() to load XmlPullParser at first.

2009-01-10 Mirko Czesla <group@czesla.de>
	* Logging: Improved logging where it was necessary. Changed some System.out to Debug class. In near future I will do this for all System.out, fill empty catch  

2008-03-29 Satoshi Konno <skonno@cybergarage.org>
	* Added Device::isRunning() to know whether the device is running.

2008-02-08 Satoshi Konno <skonno@cybergarage.org>
	* Added Node::addValue().